# discord-bot-to-telegram

./: Cargo.toml  config.example.json
src/: lib.rs  main.rs  server.rs
