[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", feature = ["multipart","json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.3"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "http"]
serenity = "0.12"
